syntax = "proto3";

package chatbot;
option go_package = "github.com/avinashsinghavin/Chatbot/grpcProto";

service ChatbotService {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc GetBotData (ChatBotRequest) returns (ChatBotResponse) {}
}

message ChatBotRequest {
  string request = 1;
}

message ChatBotResponse {
  string response = 1;
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
