syntax = "proto3";

package grpc;
option go_package = "github.com/avinashsinghavin/chatbot/grpcProto";

service ImageService {
    rpc SaveImage(ImageRequest) returns (ImageResponse) {}
    rpc GetImage(ImageIdRequest) returns (ImageResponse) {}
    rpc GetMessage(MessageRequest) returns (MessageResponse) {}
}

message MessageRequest {
    string request = 1;
}

message MessageResponse {
    string response = 1;
}

message ImageRequest {
    bytes data = 1;
}

message ImageIdRequest {
    string id = 1;
}

message ImageResponse {
    string id = 1;
    bytes data = 2;
}
